--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@types/react-helmet": "^6.1.5",
+    "gh-pages": "^4.0.0",
+    "sass": "^1.54.5"
   }
 }
